force-app/main/default/objects/Opportunity/fields/CreditLine__c.field-meta.xml
<CustomField>
    <fullName>CreditLine__c</fullName>
    <label>CreditLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>