force-app/main/default/objects/Opportunity/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>InterestRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>