force-app/main/default/objects/Opportunity/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>PaymentDate</label>
    <type>Date</type>
</CustomField>