force-app/main/default/objects/Opportunity/fields/ReadyToEnrich__c.field-meta.xml
<CustomField>
    <fullName>ReadyToEnrich__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReadyToEnrich</label>
    <type>Checkbox</type>
</CustomField>