force-app/main/default/objects/Opportunity/recordTypes/Opp_Natural_Person.recordType-meta.xml
<RecordType>
    <fullName>Opp_Natural_Person</fullName>
    <active>true</active>
    <businessProcess>Sale Natural Person Process</businessProcess>
    <label>Opp Natural Person</label>
</RecordType>