force-app/main/default/objects/Opportunity/validationRules/VR_Opp_ContractFields.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_ContractFields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(StageName, &quot;Contract&quot;),  OR(ISBLANK(PaymentDate__c), NOT(AtmWithdrawalEnabled__c)))</errorConditionFormula>
    <errorMessage>To move the Opportunity to the &apos;Contract&apos; stage, you must provide a Payment Date and ensure ATM Withdrawal is enabled</errorMessage>
</ValidationRule>