force-app/main/default/objects/Opportunity/validationRules/VR_Opp_CreditLineRoute.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_CreditLineRoute</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(StageName, &quot;Contract&quot;),  ISPICKVAL(PRIORVALUE(StageName), &quot;Start&quot;),  CreditLine__c &gt;= 3000)</errorConditionFormula>
    <errorMessage>Credit line ≥ 3000 must go through Evaluation.</errorMessage>
</ValidationRule>